--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,10 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v4
 
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.3
+    - name: Add MSBuild to PATH
+      uses: microsoft/setup-msbuild@v2
       with:
-        vs-version: '2022'
+        msbuild-architecture: x64
 
     - name: Setup vcpkg
       uses: lukka/run-vcpkg@v11
