--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,24 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v4
       with:
-        submodules: false
+        submodules: recursive
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v2
       with:
         msbuild-architecture: x64
+
+    - name: Check repository structure
+      run: |
+        Write-Host "Repository structure:"
+        Get-ChildItem -Path . -Directory | Select-Object Name
+        Write-Host "`nChecking for scintilla:"
+        if (Test-Path "scintilla") {
+          Get-ChildItem -Path scintilla -Recurse -Filter "SciLexer.h" | Select-Object FullName
+        } else {
+          Write-Host "Scintilla directory not found!"
+        }
+      shell: pwsh
 
     - name: Setup vcpkg (latest)
       run: |
